changed height of form

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
       <center>
         <table
           border="3px"
-          style="width: 600px; border-style: outset; padding: 2px"
+          style="
+            width: 600px;
+            height: 500px;
+            border-style: outset;
+            padding: 2px;
+          "
         >
           <thead>
             <th
