added style to table

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <style>
+      table {
+        border-collapse: separate;
+        border-spacing: 5px;
+      }
+
       td {
         padding-left: 30px;
         background-color: lightskyblue;
