--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         accent-color: magenta;
       }
     </style>
-    <form method="" action="">
+    <form
+      method=""
+      action="http://127.0.0.1:5500/lists_tables_forms/submit.html"
+      target="_blank"
+    >
       <center>
         <table
           border="3px"
@@ -97,13 +101,32 @@
             <tr>
               <td colspan="2" align="center">
                 <input
-                  style="margin-right: 100px"
+                  style="
+                    text-align: center;
+                    font-size: 16pt;
+                    width: 150px;
+                    height: 50px;
+                  "
                   type="button"
                   value="Click Me!"
                 />
-                <input type="reset" value="Reset" />
                 <input
-                  style="margin-left: 100px"
+                  style="
+                    text-align: center;
+                    font-size: 16pt;
+                    width: 150px;
+                    height: 50px;
+                  "
+                  type="reset"
+                  value="Reset"
+                />
+                <input
+                  style="
+                    text-align: center;
+                    font-size: 16pt;
+                    width: 150px;
+                    height: 50px;
+                  "
                   type="submit"
                   value="Submit Form"
                 />
