--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                     font-size: 16pt;
                     width: 150px;
                     height: 50px;
+                    margin-right: 29px;
                   "
                   type="submit"
                   value="Submit Form"
